--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,14 @@
 version: 2.1
-orbs:
-  browser-tools: circleci/browser-tools@1.4.6
 jobs:
-  testold:
-    parameters:
-        docker_image:
-          type: string
-          default: cimg/node:current-browsers
-    docker:
-      - image: << parameters.docker_image >>
-    steps:
-      - checkout
-      - run:
-          name: Setup
-          command: |
-            rm -rf node_modules package-lock.json
-            npm install
-      - run:
-          name: Running all unit tests
-          command: |
-            node -v
-            npm -v
-            CHROME_BIN=/usr/bin/google-chrome npm run test
   test:
     parameters:
         docker_image:
           type: string
-          default: cimg/node:current-browsers
+          default: cimg/node:current
     docker:
       - image: << parameters.docker_image >>
     steps:
       - checkout
-      - browser-tools/install-browser-tools
       - run:
           name: Setup
           command: |
@@ -42,22 +19,18 @@ jobs:
           command: |
             node -v
             npm -v
-            CHROME_BIN=/usr/bin/google-chrome npm run test
+            npm run test
 
 workflows:
   version: 2
   test-all-node-versions:
     jobs:
       - test:
-          docker_image: circleci/node:10-browsers
-      - testold:
-          docker_image: circleci/node:12-browsers
+          docker_image: cimg/node:14.21
       - test:
-          docker_image: cimg/node:14.21-browsers
+          docker_image: cimg/node:16.19
       - test:
-          docker_image: cimg/node:16.20-browsers
+          docker_image: cimg/node:18.9
       - test:
-          docker_image: cimg/node:18.9-browsers
-      - test:
-          docker_image: cimg/node:20.9-browsers
+          docker_image: cimg/node:20.9
       - test
