--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
         "debug": "npm run build:dev ; node --experimental-vm-modules --inspect-brk node_modules/.bin/jest --testEnvironment node -i",
         "clean": "git clean -f -d src test; rm -rf lib",
         "doc": "mkdir -p docs ; jsdoc2md -c jsdoc.json --separators --source src/* -m table > docs/ilibYaml.md ; npm run doc:html",
-        "doc:html": "jsdoc -c jsdoc.json"
+        "doc:html": "jsdoc -c jsdoc.json",
+        "prepare": "conditional-install"
     },
     "devDependencies": {
         "@babel/core": "^7.23.5",
@@ -71,6 +72,7 @@
         "@babel/runtime": "^7.23.5",
         "babel-loader": "^8.3.0",
         "babel-plugin-add-module-exports": "^1.0.4",
+        "conditional-install": "^1.0.1",
         "docdash": "^2.0.2",
         "expect": "^29.7.0",
         "grunt": "^1.6.1",
@@ -79,17 +81,22 @@
         "grunt-contrib-clean": "^2.0.1",
         "grunt-contrib-jshint": "^3.2.0",
         "grunt-contrib-uglify": "^5.2.2",
-        "jest": "^29.0.0",
         "jest-mock": "^29.7.0",
         "jsdoc": "^4.0.2",
         "jsdoc-to-markdown": "^8.0.0",
         "load-grunt-tasks": "^5.1.0",
-        "npm-run-all": "^4.1.5",
-        "semver": "^7.6.2"
+        "npm-run-all": "^4.1.5"
     },
     "dependencies": {
-        "@log4js-node/log4js-api": "^1.0.2",
-        "ilib-tools-common": "^1.9.1",
+         "ilib-tools-common": "^1.9.1",
         "yaml": "^2.4.2"
+    },
+    "conditionalDependencies": {
+        "process.versions.node < 14.0.0": {
+            "jest": "^26.0.0"
+        },
+        "process.versions.node >= 14.0.0": {
+            "jest": "^29.0.0"
+        }
     }
 }
