--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
         "npm-run-all": "^4.1.5"
     },
     "dependencies": {
-         "ilib-tools-common": "^1.9.1",
-        "yaml": "^2.4.2"
+        "ilib-tools-common": "file:../ilib-tools-common/ilib-tools-common-1.10.0.tgz",
+        "yaml": "^2.0.0"
     },
     "conditionalDependencies": {
         "process.versions.node < 14.0.0": {
