--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
         "npm-run-all": "^4.1.5"
     },
     "dependencies": {
-        "ilib-tools-common": "file:../ilib-tools-common/ilib-tools-common-1.10.0.tgz",
+        "ilib-tools-common": "^1.10.0",
         "yaml": "^2.0.0"
     },
     "conditionalDependencies": {
